# HECRAS-3D

./: .env.example  .gitignore  README.md  database.py  flood_manager.db  main.py  models.py  newproject.py  pyproject.toml  schemas.py  xn.xlsx
assets/css/: test.css
assets/js/: new-project.js  project-cards.js  stress-points.js  test.js  three-empty.js  three-hdf-overlay.js
resource/hdf/: shuiku.2026-Feb-26(1).g01  shuiku.b01  shuiku.bco01  shuiku.dss  shuiku.g01  shuiku.g01.hdf  shuiku.hdf  shuiku.ic.o01  shuiku.p01  shuiku.prj  shuiku.rasmap  shuiku.rasmap.backup  shuiku.sk.tif  shuiku.u01  shuiku.vrt  shuiku.x01
temp/: compare_bed_and_tif.py  inspect_shuiku_p01_hdf.py  plot_mesh_centers.py
templates/: stress-test.html  test.html  three.html
